# sticker

./: CMakeLists.txt  compile  shell.nix
include/: application.hpp  configuration.hpp  module.hpp
modules/: init.lua
src/: application.cpp  configuration.cpp  sticker.cpp
